# MegaProject

src/: CMakeLists.txt  main.cpp
src/mega/: CMakeLists.txt  mega.cpp  mega.h
stuff/: memo_and_stuff.txt
